--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,11 +1,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartActivity">
-
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    >
+<TextView
+    android:id="@+id/powitanie"
+    android:text="@string/hello_msg"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"/>
+<EditText
+    android:id="@+id/login"
+    android:layout_below="@+id/powitanie"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:singleLine="true"
+    android:hint="@string/user"
+    android:inputType="textCapWords"/>
+<EditText
+    android:id="@+id/haslo"
+    android:layout_below="@+id/login"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:singleLine="true"
+    android:hint="@string/pass"
+    android:inputType="textPassword"/>
+<Button
+    android:id="@+id/btnLoguj"
+    android:layout_below="@+id/haslo"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/loguj"/>
 </RelativeLayout>
