--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -5,33 +5,52 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#666666"
     >
+
 <TextView
     android:id="@+id/powitanie"
     android:text="@string/hello_msg"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"/>
-<EditText
-    android:id="@+id/login"
-    android:layout_below="@+id/powitanie"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:singleLine="true"
-    android:hint="@string/user"
-    android:inputType="textCapWords"/>
-<EditText
-    android:id="@+id/haslo"
-    android:layout_below="@+id/login"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:singleLine="true"
-    android:hint="@string/pass"
-    android:inputType="textPassword"/>
-<Button
-    android:id="@+id/btnLoguj"
-    android:layout_below="@+id/haslo"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/loguj"/>
+    <Button
+        android:id="@+id/btnDodaj"
+        android:layout_below="@+id/powitanie"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:text="@string/dodaj"
+        android:background="#009999"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"/>
+    <Button
+        android:id="@+id/btnUlubione"
+        android:layout_below="@+id/powitanie"
+        android:layout_toRightOf="@+id/btnDodaj"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:text="@string/ulubione"
+        android:background="#009999"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"/>
+    <Button
+        android:id="@+id/btnPrzepisy"
+        android:layout_below="@+id/btnDodaj"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:text="@string/przepisy"
+        android:background="#009999"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"/>
+    <Button
+    android:id="@+id/btnUsun"
+    android:layout_below="@+id/btnUlubione"
+    android:layout_toRightOf="@+id/btnPrzepisy"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
+    android:text="@string/usun"
+    android:background="#009999"
+    android:layout_marginLeft="20dp"
+    android:layout_marginTop="20dp"/>
+
 </RelativeLayout>
