--- a/app/src/main/res/menu/menu_start.xml
+++ b/app/src/main/res/menu/menu_start.xml
@@ -3,4 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".StartActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item
+
+    android:id="@+id/ul"
+
+    android:orderInCategory="2"
+
+    android:showAsAction="always"
+
+    android:title="ULUBIONE"/>
+
+
+
+    <item
+
+    android:id="@+id/dod"
+
+    android:orderInCategory="3"
+
+    android:showAsAction="always"
+
+    android:title="DODAJ"/>
+
+
+
+    <item
+    android:id="@+id/Przepisy"
+
+    android:orderInCategory="1"
+
+    android:showAsAction="always"
+
+    android:title="PRZEPISY"/>
+
+
 </menu>
